--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build-uat":"ng build --configuration=uat",
+    "build-prod":"ng build --configuration=production"
   },
   "private": true,
   "dependencies": {
