--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -32,11 +32,16 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  deploy-to-uat:
+    permissions:
+      contents: none
     runs-on: ubuntu-latest
+    environment:
+      name: 'uat'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
     steps:
     - uses: actions/checkout@v3
-
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
@@ -50,27 +55,6 @@ jobs:
     - name: npm  build
       run: |
         npm run build-uat --if-present
-
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v3
-      with:
-        name: node-app
-        path: .
-
-  deploy:
-    permissions:
-      contents: none
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'uat'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v3
-      with:
-        name: node-app
 
     - name: 'Deploy to Azure WebApp'
       id: deploy-to-webapp
